--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 
@@ -49,3 +50,95 @@ header nav ul li a {
     font-weight: lighter;
     font-size: 22px;
 }
+
+/* apply style to footer */
+footer {
+    background: #fce138;
+    width: 100%;
+    padding: 40px 35px;
+}
+
+/* apply style to footer h2 */
+footer h2 {
+    display: inline;
+    color: #024e76;
+    font-size: 30px;
+    margin: 0;
+}
+
+/* apply style to footer */
+footer div {
+    float: right;
+    line-height: 1.5;
+    text-align: right;
+}
+
+/* apply style to footer */
+footer a {
+    color: #024e76;
+}
+
+/* apply padding to section */
+section {
+    padding: 60px;
+}
+
+/* Hero Style Start */
+.hero {
+    background-image: url("../images/hero-bg.jpg");
+    height: 600px;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+/* Hero Style End */
+
+/* Hero Form Start */
+.hero-form {
+    border: solid 3px #024e76;
+    background-color:#fce138 ;
+    color: #024e76;
+    padding: 20px;
+    width: 500px;
+    position: absolute;
+    bottom: 120px;
+    right: 148px;
+ }
+/* Hero Form End */
+
+/* apply style to h3 */
+.hero-form h3 {
+    font-size: 24px;
+    margin: 0px;
+}
+
+/* apply spacing to p */
+.hero-form p {
+    margin: 5px 0 15px 0;
+}
+
+/* apply style to form input */
+.form-input {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+/* apply spacing to label */
+.hero-form label {
+    margin: 0 5px;
+}
+
+/* apply style to button */
+.hero-form button {
+    color: #fce138;
+    background-color: #024e76;
+    Border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+}
+/* Hero From Ends */
