--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,9 @@ body {
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 /* apply styles to h1 */
@@ -24,7 +27,6 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
-    display: inline;
 }
 
 /* apply style to a */
@@ -35,7 +37,6 @@ header a {
 
 /* apply style to nav */
 header nav {
-    float: right;
     margin: 7px 0;
 }
 
