--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,16 +40,20 @@ header nav {
     margin: 7px 0;
 }
 
-/* apply style to nav ul li */
-header nav ul li {
-    display: inline;
+/* apply style to nav ul */
+header nav ul  {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
 }
 
 /* apply style to nav ul li a */
 header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
-    font-size: 22px;
+    font-size: 1.55vw;
 }
 
 /* apply style to footer */
