--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ header nav ul  {
 
 /* apply style to nav ul li a */
 header nav ul li a {
-    margin: 0 30px;
+    margin: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -93,10 +93,10 @@ section {
 .hero-cta {
     width: 35%;
     text-align: right;
-    margin 3.5%;
+    margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1,3;
+    line-height: 1.2;
 }
 
 /* Hero cta h2 style Start */
@@ -115,6 +115,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 /* Hero Style End */
 
@@ -178,7 +179,7 @@ section {
 
 /* apply style to section title */
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -371,5 +372,11 @@ section {
     display: flex;
 }
 
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER  */
+@media screen and (max-width: 980px) {
+    header h1 a {
+        color: tomato;
+    }
+}
 
   /* REACH OUT STYLES END */
