--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,6 +295,21 @@ section {
     font-size: 17px;
 }
 
+/* Service Plans Grid */
+.service-grid-container {
+    display: grid;
+}
+
+.service-grid-item {
+    width: 200px;
+    height: 50px;
+    background-color: orange;
+    border: solid;
+    color: black;
+  }
+  
+
+
 /* Add style to Contact Section */
 .contact {
     background: #024e76;
