--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,19 +296,55 @@ section {
 }
 
 /* Service Plans Grid */
+.services {
+    background: #fce138;
+}
+
+.service-grid-wrapper {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
 .service-grid-container {
+    background: lightyellow;
+    width: 80%;
     display: grid;
+    grid-template-columns: 1fr repeat(2, 4fr);
+    grid-template-rows: repeat(5, 1fr) 2fr;
+    border: 2px solid #024e76;
+    color: #024e76;
+    font-size: 1.2rem;
 }
 
 .service-grid-item {
-    width: 200px;
-    height: 50px;
-    background-color: orange;
-    border: solid;
-    color: black;
-  }
-  
+    padding: 15px 0;
+    border: 2px solid #024e76;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
 
+.service-grid-item.basic {
+    grid-column: 2 / span 1;
+}
+
+.service-grid-item.both {
+    grid-column: 2 / span 2;
+}
+
+.service-grid-item.cancel {
+    writing-mode: vertical-lr;
+    Transform: rotate(180deg);
+    grid-column: 1;
+    grid-row: 1 / -1;
+}
+
+.grit-head, .grit-price, .service-grid-item.cancel {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
 
 /* Add style to Contact Section */
 .contact {
@@ -462,6 +498,26 @@ section {
 .step-text {
     flex: 100%;  
   }
+
+.service-grid-container {
+    grid-template-columns: 1fr 1fr;
+  }
+
+.service-grid-item.basic {
+    grid-column: 1;
+  }
+
+.service-grid-item.both {
+    grid-column: 1 / -1;
+  }
+
+.service-grid-item.cancel {
+    transform: none;
+    writing-mode: unset;
+    grid-column: 1 / -1;
+    grid-row: -1;
+  }
+
 }
 
 /* MEDIA QUERY FOR MOBILE PHONES (SCREEN < 575PX) */
