--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,11 +14,18 @@ body {
 
 /* apply styles to header */
 header {
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 80%;
     padding: 20px 35px;
     background-color: #39a6b2;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
 }
 
 /* apply styles to h1 */
@@ -27,6 +34,7 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 /* apply style to a */
@@ -54,6 +62,14 @@ header nav ul li a {
     margin: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
 }
 
 /* apply style to footer */
@@ -104,6 +120,7 @@ section {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 
@@ -111,7 +128,8 @@ section {
 .hero {
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
-    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -122,11 +140,13 @@ section {
 /* Hero Form Start */
 .hero-form {
     border: solid 3px #024e76;
-    background-color:#fce138 ;
+    border-radius: 15px;
+    background-color: rgba(252, 225, 56, 0.80);
     color: #024e76;
     padding: 20px;
     width: 40%;
     margin:3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 /* Hero Form End */
 
@@ -144,12 +164,19 @@ section {
 /* apply style to form input */
 .form-input {
     border: 1px solid #024e76;
+    border-radius: 10px;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    background-color: rgba(255,255,255, 0.75);
+}
+
+.form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 
 /* apply spacing to label */
@@ -164,7 +191,13 @@ section {
     Border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
 }
+
+.hero-form button:hover {
+    background-color: #39a6b2;
+}
+
 /* Hero From Ends */
 
 /* apply style to intro p */
@@ -208,11 +241,15 @@ section {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid #39a6b2;
+}
+
+.step:last-child {
+    border-bottom: none;
 }
 
 .step h3 {
@@ -388,6 +425,7 @@ section {
   
 .contact-form input, .contact-form textarea {
     border: 1px solid #024e76;
+    border-radius: 10px;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
@@ -395,6 +433,12 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    background-color: rgba(255,255,255, 0.75);
+}
+
+.contact-form input:focus, .contact-form textarea:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 
 .contact-form button {
@@ -405,6 +449,12 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
+}
+
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
 }
 
 .contact-info a {
@@ -427,6 +477,7 @@ section {
 @media screen and (max-width: 980px) {
 header {
     padding-bottom: 0;
+    position: relative;
     justify-content: center;
   }
 
