--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,11 @@
 /* apply default style */
+
+:root {
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,7 +15,7 @@
 
 /* apply styles to body */
 body {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -19,7 +26,7 @@ header {
     background-attachment: fixed;
     background-position: 80%;
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -33,7 +40,7 @@ header {
 header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     margin: 0;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
@@ -41,7 +48,7 @@ header h1 {
 /* apply style to a */
 header a {
     text-decoration: none;
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 /* apply style to nav */
@@ -67,15 +74,15 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
 }
 
 /* apply style to footer */
 footer {
-    background: #fce138;
+    background: var(--primary-color);
     width: 100%;
     padding: 40px 35px;
     display: flex;
@@ -85,7 +92,7 @@ footer {
 
 /* apply style to footer h2 */
 footer h2 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 30px;
     margin: 0;
 }
@@ -98,7 +105,7 @@ footer div {
 
 /* apply style to footer */
 footer a {
-    color: #024e76;
+    color: var(--secondary-color);
 }
 
 /* apply padding to section */
@@ -120,7 +127,7 @@ section {
 .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -140,10 +147,10 @@ section {
 
 /* Hero Form Start */
 .hero-form {
-    border: solid 3px #024e76;
+    border: solid 3px var(--secondary-color);
     border-radius: 15px;
     background-color: rgba(252, 225, 56, 0.80);
-    color: #024e76;
+    color: var(--secondary-color);
     padding: 20px;
     width: 40%;
     margin:3.5%;
@@ -164,12 +171,12 @@ section {
 
 /* apply style to form input */
 .form-input {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     border-radius: 10px;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     background-color: rgba(255,255,255, 0.75);
@@ -187,8 +194,8 @@ section {
 
 /* apply style to button */
 .hero-form button {
-    color: #fce138;
-    background-color: #024e76;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
     Border: none;
     padding: 10px 20px;
     font-size: 16px;
@@ -196,7 +203,7 @@ section {
 }
 
 .hero-form button:hover {
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
 }
 
 .checkbox-wrapper input, .radio-wrapper input {
@@ -215,7 +222,7 @@ section {
     height: 20px;
     width: 20px;
     background: rgba(255, 255, 255, 0.75);  
-    border: 1px solid #024e76;  
+    border: 1px solid var(--secondary-color);  
     position: absolute;
     top: -4px;
     left: -30px;
@@ -230,19 +237,19 @@ section {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background: #024e76;
+    background: var(--secondary-color);
     position: absolute;
     left: -29px;
     top: -3px;
-    background-image: radial-gradient(circle, #39a6b2, #024e76);
+    background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color));
 }
   
 .checkbox-wrapper label::after {
     content: "";
     height: 6px;
     width: 14px;
-    border-left: 2px solid #024e76;
-    border-bottom: 2px solid #024e76;
+    border-left: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
     position: absolute;
     left: -26px;
     top: 1px;
@@ -265,7 +272,7 @@ section {
 /* apply style to intro p */
 .intro p {
     font-size: 20px;
-    color: #39a6b2;
+    color: var(--tertiary-color);
     width: 80%;
     margin: 0 auto;
     line-height: 1.7;
@@ -275,7 +282,7 @@ section {
 /* apply style to section title */
 .section-title {
     font-size: 48px;
-    color: #024e76;
+    color: var(--secondary-color);
     border-bottom: 3px solid;
     padding-bottom: 20px;
     text-align: center;
@@ -285,17 +292,17 @@ section {
 
 /* apply style to primary */
 .primary-border {
-    border-color: #fce138;
+    border-color: var(--primary-color);
 }
 
 /* apply style to secondary */
 .secondary-border {
-    border-color: #39a6b2;
+    border-color: var(--tertiary-color);
 }
 
 /* apply style to primary */
 .primary-border {
-    border-color: #fce138;
+    border-color: var(--primary-color);
 }
 
 /* apply style to steps */
@@ -307,7 +314,7 @@ section {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid #39a6b2;
+    border-bottom: 1px solid var(--tertiary-color);
 }
 
 .step:last-child {
@@ -315,19 +322,19 @@ section {
 }
 
 .step h3 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 46px;
     flex: 1 30%;
 }
 
 .step h4 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 26px;
     line-height: 1.5;
 }
 
 .steps {
-    background-color: #fce138;
+    background-color: var(--primary-color);
 }
 
 .step-info {
@@ -351,7 +358,7 @@ section {
 }
 
 .step-text p {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-size: 18px;
 }
 
@@ -366,8 +373,8 @@ section {
 
 .trainer {
     margin: 20px;
-    background: #024e76;
-    color: #fce138;
+    background: var(--secondary-color);
+    color: var(--primary-color);
     flex: 1;
 }
 
@@ -396,7 +403,7 @@ section {
 
 /* Service Plans Grid */
 .services {
-    background: #fce138;
+    background: var(--primary-color);
 }
 
 .service-grid-wrapper {
@@ -411,14 +418,14 @@ section {
     display: grid;
     grid-template-columns: 1fr repeat(2, 4fr);
     grid-template-rows: repeat(5, 1fr) 2fr;
-    border: 2px solid #024e76;
-    color: #024e76;
+    border: 2px solid var(--secondary-color);
+    color: var(--secondary-color);
     font-size: 1.2rem;
 }
 
 .service-grid-item {
     padding: 15px 0;
-    border: 2px solid #024e76;
+    border: 2px solid var(--secondary-color);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -447,11 +454,11 @@ section {
 
 /* Add style to Contact Section */
 .contact {
-    background: #024e76;
+    background: var(--secondary-color);
 }
 
 .contact h2 {
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 .contact-info > * {
@@ -474,7 +481,7 @@ section {
 }
 
 .contact-info h3 {
-    color: #fce138;
+    color: var(--primary-color);
     font-size: 32px;
 }
   
@@ -486,12 +493,12 @@ section {
 }
   
 .contact-form input, .contact-form textarea {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     border-radius: 10px;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
@@ -506,8 +513,8 @@ section {
 .contact-form button {
     width: 100%;
     border: none;
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
@@ -515,12 +522,12 @@ section {
 }
 
 .contact-form button:hover {
-    color: #fce138;
-    background: #39a6b2;
+    color: var(--primary-color);
+    background: var(--tertiary-color);
 }
 
 .contact-info a {
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 .text-left {
